--- a/tour-eureka-server.yml
+++ b/tour-eureka-server.yml
@@ -3,7 +3,10 @@ server:
 
 eureka:
   client:
+    serviceUrl:
+      defaultZone: http://localhost:8585/eureka/
     registerWithEureka: false
     fetchRegistry: false
   server:
-    waitTimeInMsWhenSyncEmpty: 0
+    waitTimeInMsWhenSyncEmpty: 0   
+    
