--- a/application.yml
+++ b/application.yml
@@ -12,7 +12,7 @@ spring:
   profiles: cloud
   cloud:
     config:
-      uri: ${vcap.services.${PREFIX:}configserver.credentials.uri:http://user:password@${PREFIX:}configserver.${application.domain:cfapps.io}}
+      uri: ${vcap.services.${PREFIX:}tour-config-server.credentials.uri:http://user:password@${PREFIX:}tour-config-server.${application.domain:cfapps.io}}
 oauth2:
   client:
     tokenUri: ${vcap.services.${PREFIX:}sso.credentials.tokenUri:}
